--- a/demos/websocket/templates/index.html
+++ b/demos/websocket/templates/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="body">
+      <h3>Messages</h3>
       <div id="inbox">
         {% for message in messages %}
           {% include "message.html" %}
